--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-html": "^1.7.0",
     "eslint-plugin-import": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "node-sass": "^4.3.0",
     "ora": "^0.4.0",
+    "sass-loader": "^4.1.1",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.13.1",
     "vue": "2.1.10",
